--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>RESUME</title>
 </head>
 <body style="background-color:blanchedalmond;">
+<img src="https://github.com/chiragtyagi-09/Resume/blob/master/a.jpg" alt="" width="200" height="200" style="float:right">
+
 
 <center><h2><u>RESUME</u></h2></center>
 <br>
@@ -34,7 +36,7 @@ width="100%">
 <tr>
 <td>2016-2019</td>
 <td>BCA</td>
-<td>IIMT,MEERUT</td>
+<td>IIMT University,MEERUT</td>
 <td>CCS</td>
 </tr>
 <tr>
@@ -101,6 +103,7 @@ width="100%">
 <li><b>Languages Known</b>     : English & Hindi</li>
 <br>
 <li><b>Permanent Address</b>  : B-49 Moti Prayag Society,Garh Road Meerut</li>
+<br>
 <br>
 <br>
 <li><b>Signature</b>           : Chirag Tyagi</li>
