--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>RESUME</title>
 </head>
 <body style="background-color:blanchedalmond;">
-<img src="https://github.com/chiragtyagi-09/Resume/blob/master/a.jpg" alt="" width="200" height="200" style="float:right">
+<img src="a.jpg" alt="" width="200" height="200" style="float:right">
 
 
 <center><h2><u>RESUME</u></h2></center>
